FINAL, for now at least! Bugs on iPhone fixed.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -25,11 +25,15 @@ html, body{
 	font-family: "Cooper Hewitt", "Helvetica", sans-serif;
 	font-size:5vw;
   max-width:100vw;
-  overflow-x: hidden;
+  //overflow-x: hidden;
   @include screen {
+    padding:0;
+    padding-bottom: 10vh;
     font-size: 1.6rem;
+
   }
 }
+
 
 /* body.down * {
   transform:rotate(90deg);
@@ -47,7 +51,7 @@ ul, li {
 }
 
 ul {
-  padding:5vw;
+  padding:0 5vw;
 }
 
 @include scrollbars(0.20rem, $red);
@@ -58,4 +62,8 @@ ul {
 
 .flip-down{
   transform:rotate(-180deg);
+}
+
+.social {
+  margin-bottom:5vh;
 }
