--- a/src/scss/_box.scss
+++ b/src/scss/_box.scss
@@ -17,13 +17,18 @@
 .arrows {
   position: absolute;
   pointer-events:none;
-  mix-blend-mode: multiply;
-  z-index:0;
+  @include screen {
+    mix-blend-mode: multiply;
+    z-index:-1;
+  }
+  //mix-blend-mode: multiply;
+  //z-index:-1;
   div {
     position: relative;
-    width: calc(33.333vw - 0.10rem);
-    height: 80vh;
+    width: 30vw;
+    height: 40vh;
     @include screen {
+    width: calc(33.333vw - 0.10rem);
     //height: 33.333vh;
     height: 45vh;
     }
@@ -45,12 +50,14 @@
     display: block;
     overflow: visible;
     position: relative;
-    z-index:999;
+    //z-index:999;
   }
 }
 
 .boxes {
-  overflow:hidden;
+  @include screen {
+    overflow:hidden;
+  }
   padding:0;
   margin:0;
   margin-bottom:3rem;
@@ -100,16 +107,27 @@
     right:4vw;
   }
   h3.left {
-    transform:rotate(-90deg);
-    transform-origin:center center;
+    transform: rotate(-180deg);
+    transform-origin: 40% 60%;
+    @include screen {
+      transform:rotate(-90deg);
+      transform-origin:center center;
+    }
   }
   h3.bottom {
-    transform:rotate(180deg);
-    transform-origin:50% 90%;
+    @include screen {
+      transform:rotate(180deg);
+      transform-origin:50% 90%;
+    }
+    transform: rotate(-90deg);
+    transform-origin: 50% 50%;
   }
   h3.right {
     transform:rotate(90deg);
-    transform-origin:50% 140%;
+    transform-origin: 40% 60%;
+    @include screen {
+      transform-origin:50% 140%;
+    }
   }
   float: none;
 	position: relative;
@@ -208,7 +226,7 @@
 }
 
 .cube {
-  perspective: 1000vw;
+  perspective: 99999px;
   transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) translateX(0em) translateY(0em) translateZ(0em);
 }
 .cube .side {
